--- a/HW_18/appsettings.json
+++ b/HW_18/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "DefaultConnection": "Server=.\\SQL19;Database=BikeStores;User Id=sa;Password=123;" }
 }
